changed view of dataTable

--- a/MemoryGame/Views/Admin/DataTable.cshtml
+++ b/MemoryGame/Views/Admin/DataTable.cshtml
@@ -6,7 +6,11 @@
     <script type="text/javascript" src="~/Scripts/JS/DataTable.js"></script>
     
 }
-<link rel="stylesheet" href="~/Content/DataTable.css" />
+
+<link rel="stylesheet" href="~/Content/css/Login.css" />
+<link rel="stylesheet" href="~/Content/css/chooseReplay.css" />
+
+
 <h2>DataTable</h2>
 <div id="tabledata">
 
