--- a/MemoryGame/Views/Home/InstructionsTwo.cshtml
+++ b/MemoryGame/Views/Home/InstructionsTwo.cshtml
@@ -20,7 +20,7 @@
             by clicking a pair of cards they will turn the other way around and you will get the chance to see them. </p>
         <p> 3. If the cards match, extra point will be recieved to the score and the cards will disapear from the board. </p>
         <p> 4. You will play in turns, after each try, the turn moves to the next player and the others will rest. </p>
-        <p> 5. Your job is to get the maximum score possible within th given time. </p>    
+        <p> 5. Your job is to get the maximum score possible within the given time. </p>    
     </div>
 
     <div class="clickers">
