--- a/MemoryGame/Content/css/endGame.css
+++ b/MemoryGame/Content/css/endGame.css
@@ -1,8 +1,12 @@
 ﻿body {
     font-size: 20px;
 }
-.dataArea {
-    margin-left: 50px;
+
+.data_area {
+    text-align:center;
+    margin-left:15%;
+    margin-right:15%;
+
 }
 
 .agent {
@@ -10,9 +14,6 @@
     height: 100px;
 }
 
-.data_text {
-    float: right;
-}
 
 p {
     text-align:left;
@@ -22,19 +23,31 @@ p {
     color: #002966;
     font-size: 25px;
     font-weight: 600;
+    float:left;
+
 }
 
-.css-input {
-    margin-right: 20px;
+.data_text {
+    margin-left:200px;
 }
 
 
-.green, .failed {
-    margin-top: 2%;
-    margin-left: 40%;
-    text-align: center;
-    float: left;
-    margin-bottom:1%;
+
+.right_side, .left_side {
+    padding-left:50px;
+}
+
+.left_side {
+    width:85%;
+}
+
+.right_side {
+    border: 2px solid black;
+    border-radius: 8px;
+}
+
+.clickers {
+    margin:50px;
 }
 
 .content {
@@ -44,45 +57,9 @@ p {
     border-radius: 8px;
     padding-right: 5px;
     padding-left: 5px;
-    height: 120px;
-    text-align: center;
+    height: 140px;
 }
 
 .Red_Button {
-    height: 60px;
-}
-
-.Green_Button {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    border: none;
-    width: 120px;
-    height: 50px;
-    border-radius: 8px;
-    transition: color .20s ease-in-out, background-color .20s ease-in-out, border-color .20s ease-in-out, box-shadow .20s ease-in-out;
-    background-color: #73bf73;
-    color: white;
-    box-shadow: grey 5px 5px 5px;
-}
-
-    .Green_Button:focus {
-        outline: none;
-    }
-
-    .Green_Button:hover {
-        background-color: #79d279;
-    }
-
-.left_side {
-    width: 50%;
-    display: block;
-    float: left;
-}
-.right_side {
-    width: 20%;
-    float: right;
-}
-
-.green, failed {
+    height: 85px;
 }
