finised all flows. experiment flow - minor bugs to be fixed. admin - replay not working, databtable is not updated yet

--- a/MemoryGame/Views/Admin/DataTable.cshtml
+++ b/MemoryGame/Views/Admin/DataTable.cshtml
@@ -12,7 +12,11 @@
 
 
 <h2>DataTable</h2>
+<div class="back_btn">
+    <buton onclick="back()" class="btn">Back</buton>
+</div>
 <div id="tabledata">
+
 
 </div>
 
