--- a/MemoryGame/Views/Home/interfaceExample.cshtml
+++ b/MemoryGame/Views/Home/interfaceExample.cshtml
@@ -10,7 +10,10 @@
         <h3 style="text-align: center;">
             Here is what your interface will look like:
         </h3>
-        <img src="~/Resources/boardExample3.png" alt="Italian Trulli" width="800" height="500">
+        <div>
+            <img src="~/Resources/Images/interface.PNG" alt="Italian Trulli" width="800" height="500">
+        </div>
+        
         <br />
         <br />
         <div class="clickers">
