--- a/MemoryGame/Content/css/login.css
+++ b/MemoryGame/Content/css/login.css
@@ -53,7 +53,7 @@ label {
 
 .container {
     background: #fdfdfd;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius:20px;
 }
 
