--- a/MemoryGame/Views/Admin/ChooseReplay.cshtml
+++ b/MemoryGame/Views/Admin/ChooseReplay.cshtml
@@ -17,7 +17,8 @@
     <div>
         <h2> Choose a Replay to RUN! </h2>
     </div>
-
-
+    <div class="back_btn">
+        <buton onclick="back()" class="btn">Back</buton>
+    </div>
 </body>
 
