--- a/MemoryGame/Views/Admin/ChooseDataOrReplay.cshtml
+++ b/MemoryGame/Views/Admin/ChooseDataOrReplay.cshtml
@@ -5,10 +5,13 @@
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/chooseDataOrReplay.js"></script>
 }
+
+<link rel="stylesheet" href="~/Content/css/login.css" />
 <link rel="stylesheet" href="~/Content/css/chooseDataOrReplay.css" />
 
 
-<h2>chooseDataOrReplay</h2>
+
+<h2>Choose Data Or Replay</h2>
 
 <body>
     <div class="rplBtn">
