--- a/MemoryGame/Views/Admin/DataTable.cshtml
+++ b/MemoryGame/Views/Admin/DataTable.cshtml
@@ -12,8 +12,8 @@
 
 
 <h2>DataTable</h2>
-<div class="back_btn">
-    <buton onclick="back()" class="btn">Back</buton>
+<div class="back_container">
+    <buton onclick="back()" class="btn back_btn">Back</buton>
 </div>
 <div id="tabledata">
 
