--- a/MemoryGame/Content/css/interfaceExample.css
+++ b/MemoryGame/Content/css/interfaceExample.css
@@ -4,9 +4,16 @@ body {
     background-size: cover;
 }
 
+.cont {
+    text-align:center;
+}
 
-img {
-    width: auto;
+.out_img {
+}
+
+
+.inner_img {
+    width: max-content;
 }
 
 
