--- a/MemoryGame/Views/Admin/DataTable.cshtml
+++ b/MemoryGame/Views/Admin/DataTable.cshtml
@@ -4,14 +4,15 @@
 }
 @section scripts {
     <script type="text/javascript" src="~/Scripts/JS/DataTable.js"></script>
-    
+
 }
 
 <link rel="stylesheet" href="~/Content/css/Login.css" />
-<link rel="stylesheet" href="~/Content/css/chooseReplay.css" />
+<link rel="stylesheet" href="~/Content/css/dataTable.css" />
 
 
-<h2>DataTable</h2>
+
+<h2>Data Table</h2>
 <div class="back_container">
     <buton onclick="back()" class="btn back_btn">Back</buton>
 </div>
